<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	<RadioGroup	
		android:id="@+id/sensi_oper" 
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		>
		<RadioButton 
			android:id="@+id/sensi_zoom"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/zoom"
			/>
		<RadioButton 
			android:id="@+id/sensi_draw_num"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/num"
			/>
		<RadioButton 
			android:id="@+id/sensi_draw_area"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/area"
			/>
		<RadioButton 
			android:id="@+id/sensi_analysis"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/analysis_text"
			/>
		<RadioButton 
			android:id="@+id/sensi_reset"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/reset"
			/>
	</RadioGroup>
</LinearLayout>
