<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	<RadioGroup	
		android:id="@+id/acne_oper" 
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		>
		<RadioButton 
			android:id="@+id/acne_zoom"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/zoom"
			/>
		<RadioButton 
			android:id="@+id/acne_draw"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/draw_circle"
			/>
		<RadioButton 
			android:id="@+id/acne_analysis"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/analysis_text"
			/>
		<RadioButton 
			android:id="@+id/acne_reset"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/reset"
			/>
	</RadioGroup>
</LinearLayout>
