<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout_error_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:id="@+id/textView_msg_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:text="@string/app_error_tag_des"
        />

    <CheckBox
        android:id="@+id/checkBox_restart_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/app_error_checkbox"
        />

    <EditText
        android:id="@+id/editText_text_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:hint="@string/app_error_tag_hint"
        android:maxLength="500"
        android:maxLines="5"
        android:minLines="3"
        android:paddingLeft="20.0sp"
        android:saveEnabled="true" />

    <LinearLayout
        android:id="@+id/linearLayout_button_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_submit_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/app_error_submit" />

        <Button
            android:id="@+id/button_cancel_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/app_error_close" />
    </LinearLayout>

</LinearLayout>